# ai-assistant

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml
ai_assistant/: __init__.py  cli.py  config.py  cost_tracker.py  export.py  i18n.py  privacy.py  web_search.py
ai_assistant/gui/: __init__.py  app.py  chat_widget.py  main_window.py  settings_dialog.py
ai_assistant/providers/: claude.py  ollama.py
ai_assistant/templates/: __init__.py  manager.py
scripts/: publish.py
src/: __init__.py  cli.py  config.py  cost_tracker.py  file_handler.py  privacy.py  storage.py
src/gui/: app.py  chat_widget.py  cost_widget.py  main_window.py  settings_dialog.py  styles.py
src/providers/: __init__.py  base.py  mimo.py  openai.py
tests/: conftest.py  test_advanced.py  test_basic.py  test_config.py  test_cost_tracker.py  test_gui.py  test_privacy.py  test_providers.py  test_storage.py  test_templates.py
