[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-assistant"
version = "0.2.0"
description = "本地化AI助手，解决回答不准、收费贵、隐私顾虑"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "守诚知", email = "shouchengzhi@example.com" },
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.5.0",
]
files = [
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
]
pdf = [
    "weasyprint>=60.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ai-assistant = "src.cli:main"
ai-assistant-gui = "src.gui.app:run_gui"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
